# DNT-MW-StudyBud

./: .gitignore  CMakeLists.txt  README.md  flash_recovery.py  partitions.csv  requirements.txt  sdkconfig.defaults
DESKTOP-EMULATOR-LAUNCH/: circular_popup_pygame.py  watch_app_simulator.html
Docs/: 01_hardware_overview.md  02_circuitpython_setup.md  03_display_setup.md  04_peripherals_and_wiring.md  05_arduino_and_troubleshooting.md  06_desktop_displayio_emulator_roadmap.md  07_portable_development_constraints.md
ESP32-LAUNCH/: circular_popup.py  watch_app_simulator.py
ESP32-S3-LCD-2.8C-V1/: CMakeLists.txt  dial_button_speaker_demo.c++  display_test.c++
ESP32-S3-LCD-2.8C-V1/EXIO/: TCA9554PWR.cpp  TCA9554PWR.h
ESP32-S3-LCD-2.8C-V1/I2C_Driver/: I2C_Driver.cpp  I2C_Driver.h
ESP32-S3-LCD-2.8C-V1/LCD_Driver/: ST7701S.cpp  ST7701S.h
Progress-Reports/: template_for_development_notes.md
Progress-Reports/App-Design/Breathing-App/Iteration_1/: ITER1_Development_notes.md
Progress-Reports/App-Design/Breathing-App/Iteration_2/: ITER1_Development_notes.md
Progress-Reports/Logo-Development/Water-Tracker/: 17-6-Water-App-Logo.md  20-6-Water-App-Logo.md
docs/: LVGL-Roadmap.md  installation_guide.md  rotary_encoder.md
docs/TEMP/: Breathing-App-Roadmap.md  Breathing-Implementation-Plan.md  Idle-Background-App-Roadmap.md  LVL-GL-Simulator-Roadmap.md  Problems-with-breathing-app-iteration-1.md  Sleeping-App-Implementation-Plan.md  TEMP-qa-UI-Decisions.md  Todo-App-Roadmap.md  Web-App-Comm-Test-Roadmap.md
docs/Web-App-Details/: Connection-Plan.md  Design-System.md  Display-Interaction-Guide.md  UI-Feature-Implementation-Plan.md  UI-Feature-List.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.cpp
main/assets/: idle_bg_tree.c  idle_bg_tree.h
main/display/: studybud_theme.h  ui_manager.c  ui_manager.h
main/display/encoder/: encoder_input.c  encoder_input.h
main/display/lvgl_driver/: LVGL_Driver.c  LVGL_Driver.h
main/display/screens/: screen_breathing.c  screen_breathing.h  screen_home.c  screen_home.h  screen_idle_background.c  screen_idle_background.h  screen_menu.c  screen_menu.h  screen_todos.c  screen_todos.h
main/display/utils/: session_store.c  session_store.h
main/networking/: app_state.c  app_state.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
simulator/: CMakeLists.txt  SDL_Driver.c  SDL_Driver.h  esp_log.h  lv_conf.h  main.c
web-app/: index.html  package-lock.json  package.json  vite.config.js
web-app/src/: App.svelte  style.css
web-app/src/lib/: api.js
