idf_component_register(
    SRCS
        "main.cpp"
        "display/lvgl_driver/LVGL_Driver.c"
        "display/encoder/encoder_input.c"
        "display/ui_manager.c"
        "display/screens/screen_home.c"
        "display/screens/screen_menu.c"
        "display/screens/screen_todos.c"
        "display/screens/screen_breathing.c"
        "display/screens/screen_idle_background.c"
        "assets/idle_bg_tree.c"
        "display/utils/session_store.c"
        "networking/wifi_manager.c"
        "networking/web_server.c"
        "networking/app_state.c"
    INCLUDE_DIRS
        "."
        "display"
        "display/lvgl_driver"
        "display/encoder"
        "display/screens"
        "display/utils"
        "assets"
        "networking"
    REQUIRES
        ESP32-S3-LCD-2.8C-V1
        lvgl
        esp_wifi
        esp_http_server
        nvs_flash
        esp_netif
    PRIV_REQUIRES
        driver
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_spi
        esp_lcd
        esp_timer
        freertos
        heap
        log
)
